Fix spacing between button and stars

--- a/admin-dev/themes/new-theme/scss/pages/_modules.scss
+++ b/admin-dev/themes/new-theme/scss/pages/_modules.scss
@@ -922,5 +922,19 @@ form#importDropzone {
         font-weight: 500;
       }
     }
+
+    .module-sorting {
+      width: 100%;
+      margin-left: 0;
+    }
+
+    .module-stars,
+    .module-price {
+      bottom: 60px;
+    }
+
+    .module-actions {
+      padding: 0 0.5rem;
+    }
   }
 }
